--- a/src/global.css
+++ b/src/global.css
@@ -50,6 +50,7 @@ body {
   --gap-9xl: 28px;
   --gap-xl: 20px;
   --gap-38xl: 57px;
+  --gap-70xl: 70px;
   --gap-143xl: 162px;
   --gap-62xl: 81px;
   --gap-8xl: 27px;
