--- a/src/screens/OrganizationEvents/OrganizationEvents.module.css
+++ b/src/screens/OrganizationEvents/OrganizationEvents.module.css
@@ -198,6 +198,8 @@
   padding-bottom: 2px;
   padding-right: 5px;
   padding-left: 5px;
+  margin-right: 5px;
+  margin-left: 5px;
 }
 .checkboxdiv > label {
   margin-right: 50px;
