feat: added validation for links in advertisement
- Implemented validation for the `formState.link` field to ensure that it represents a valid URL.
- Proper The validation checks have been added to prevent users from submitting arbitrary or
  invalid strings when creating a new advertisement.
- Added tests for the modified code.
- Ensured no other functionality or tests fail after the changes.

Signed-off-by: Akhilender <akhilenderb9@gmail.com>

--- a/src/components/Advertisements/core/AdvertisementRegister/AdvertisementRegister.module.css
+++ b/src/components/Advertisements/core/AdvertisementRegister/AdvertisementRegister.module.css
@@ -17,3 +17,9 @@
   background-color: #31bb6b;
   color: white;
 }
+
+.link_check {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
