--- a/src/screens/OrgSettings/OrgSettings.module.css
+++ b/src/screens/OrgSettings/OrgSettings.module.css
@@ -1,5 +1,10 @@
+.settingsContainer {
+  min-height: 100vh;
+}
+
 .settingsBody {
-  margin: 2.5rem 0;
+  min-height: 100vh;
+  margin: 2.5rem 1rem;
 }
 
 .cardHeader {
@@ -22,4 +27,10 @@
 .cardBody .textBox {
   margin: 0 0 3rem 0;
   color: var(--bs-secondary);
+}
+
+hr {
+  border: none;
+  height: 1px;
+  background-color: var(--bs-gray-500);
 }
