feat: added the functionalities to the new ui

--- a/src/global.css
+++ b/src/global.css
@@ -52,6 +52,7 @@ body {
   --gap-38xl: 57px;
   --gap-70xl: 70px;
   --gap-143xl: 162px;
+  --gap-130xl: 135px;
   --gap-62xl: 81px;
   --gap-8xl: 27px;
   --gap-6xs: 7px;
