--- a/src/components/Drawer/Drawer.module.css
+++ b/src/components/Drawer/Drawer.module.css
@@ -110,6 +110,7 @@
 .organizationSection {
   align-self: stretch;
   border-radius: var(--br-base);
+  border: none;
   background-color: var(--color-mediumseagreen-300);
   display: flex;
   flex-direction: row;
@@ -340,7 +341,7 @@
   width: 100%;
   height: 100%;
 }
-.mdipostOutlineIcon {
+.postIcon {
   position: absolute;
   top: calc(50% - 11.5px);
   left: calc(50% - 12px);
@@ -522,23 +523,27 @@
 .groupButton:hover {
   background-color: var(--color-deeppink-100);
 }
-.rishavJha,
-.superAdmin {
+.profileLink {
+  display: contents;
+  color: black;
+}
+.userName,
+.userType {
   position: relative;
   z-index: 1;
 }
-.rishavJha {
+.userName {
   margin: 0;
   font-size: inherit;
   font-weight: 400;
   font-family: inherit;
 }
-.superAdmin {
+.userType {
   font-size: var(--font-size-base);
   color: var(--color-dimgray-100);
 }
 .rJText,
-.removeMembersButton {
+.userCredentialContainer {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -590,9 +595,9 @@
   overflow: hidden;
   z-index: 1;
 }
-.requestsRoleFrameParent,
+.signOutIcon,
 .signOut {
-  height: 51px;
+  height: fit-content;
   width: 50px;
   position: relative;
   z-index: 1;
@@ -643,12 +648,15 @@
   padding: var(--padding-7xl) var(--padding-4xl) var(--padding-3xl)
     var(--padding-3xl);
   box-sizing: border-box;
-  gap: var(--gap-70xl);
+  gap: var(--gap-130xl);
   max-width: 100%;
   text-align: center;
   font-size: var(--font-size-lg);
   color: var(--color-black);
   font-family: var(--font-lato);
+}
+.closeModalBtn {
+  display: none;
 }
 @media screen and (max-width: 1050px) {
   .drawer {
@@ -688,7 +696,7 @@
   .rj {
     font-size: var(--font-size-lgi);
   }
-  .rishavJha {
+  .userName {
     font-size: var(--font-size-base);
   }
   .signOutButton {
@@ -696,5 +704,146 @@
   }
   .drawer {
     gap: var(--gap-62xl);
+  }
+}
+
+@media (max-width: 1120px) {
+  .leftDrawer {
+    width: calc(250px + 2rem);
+    padding: 1rem 1rem 0 1rem;
+  }
+}
+
+/* For tablets */
+@media (max-width: 820px) {
+  .hideElemByDefault {
+    display: none;
+  }
+
+  .leftDrawer {
+    width: 100%;
+    left: 0;
+    right: 0;
+  }
+
+  .leftDrawer .closeModalBtn {
+    display: block;
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    z-index: 10;
+  }
+
+  /* For smaller devices .activeDrawer in real behaves like inactive */
+  .activeDrawer {
+    opacity: 0;
+    left: 0;
+    z-index: -1;
+    animation: closeDrawer 0.4s ease-in-out;
+  }
+
+  /* For smaller devices .inactiveDrawer in real behaves like active */
+  .inactiveDrawer {
+    display: flex;
+    z-index: 100;
+    animation: openDrawer 0.6s ease-in-out;
+  }
+}
+
+@keyframes goToLeftBigScreen {
+  from {
+    left: 0;
+  }
+
+  to {
+    opacity: 0.1;
+    left: calc(-300px - 2rem);
+  }
+}
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes goToLeftBigScreen {
+  from {
+    left: 0;
+  }
+
+  to {
+    opacity: 0.1;
+    left: calc(-300px - 2rem);
+  }
+}
+
+@keyframes comeToRightBigScreen {
+  from {
+    opacity: 0.4;
+    left: calc(-300px - 2rem);
+  }
+
+  to {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes comeToRightBigScreen {
+  from {
+    opacity: 0.4;
+    left: calc(-300px - 2rem);
+  }
+
+  to {
+    opacity: 1;
+    left: 0;
+  }
+}
+
+@keyframes closeDrawer {
+  from {
+    left: 0;
+    opacity: 1;
+  }
+
+  to {
+    left: -1000px;
+    opacity: 0;
+  }
+}
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes closeDrawer {
+  from {
+    left: 0;
+    opacity: 1;
+  }
+
+  to {
+    left: -1000px;
+    opacity: 0;
+  }
+}
+
+@keyframes openDrawer {
+  from {
+    opacity: 0;
+    left: -1000px;
+  }
+
+  to {
+    left: 0;
+    opacity: 1;
+  }
+}
+
+/* Webkit prefix for older browser compatibility */
+@-webkit-keyframes openDrawer {
+  from {
+    opacity: 0;
+    left: -1000px;
+  }
+
+  to {
+    left: 0;
+    opacity: 1;
   }
 }
