--- a/src/components/OrgPeopleListCard/OrgPeopleListCard.module.css
+++ b/src/components/OrgPeopleListCard/OrgPeopleListCard.module.css
@@ -21,6 +21,7 @@
   flex-direction: row;
   padding: 0 var(--padding-12xs) 0 0;
   gap: var(--gap-43xl);
+  margin-bottom: 10px;
   max-width: 100%;
 }
 
