add dropdown for toggling settings on small screens

--- a/src/screens/OrgSettings/OrgSettings.module.css
+++ b/src/screens/OrgSettings/OrgSettings.module.css
@@ -34,3 +34,20 @@ hr {
   height: 1px;
   background-color: var(--bs-gray-500);
 }
+
+.settingsTabs {
+  display: none;
+}
+
+@media (min-width: 577px) {
+  .settingsDropdown {
+    display: none;
+    border: 1px solid black;
+  }
+}
+
+@media (min-width: 577px) {
+  .settingsTabs {
+    display: block;
+  }
+}
