feat: implemented support to upload media in advertisement register component (#1248)
* feat: implemented support to upload media in advertisement register component

* fix: failing tests

* fix: failing tests

* removed commented code

* fix: failing tests

* renamed link variable to mediaUrl

* updated the type of mediaUrl

* updated schema and mutation for createAdvertisement

* removed unused variables

* Added support to display advertisement image/video in user portal

* fix: failing tests

* fix: failing tests

* reverted unwanted changes

* fix: failing tests

* fix: failing tests

* added translations for different languages and improved variable names

* Updated variable name and input fields for creating advertisements

* fix: failing tests

* fix: failing tests

* updated get advertisement query

* fix: update advertisement feature

* removed unwanted curly braces

* fix failing tests

* updated type of file

* fix: formatting issues

* fix: formatting issues

* updated variable name and fix cross origin error

* removed: unwanted curly braces

* fix: failing tests

* added oragnization resolver for advertisement

* removed unwanted code

* fix: failing tests

* fix: formatting issues

* fix: formatting issues

* fix: formatting issues

* fix: failing tests

--- a/src/components/Advertisements/core/AdvertisementEntry/AdvertisementEntry.module.css
+++ b/src/components/Advertisements/core/AdvertisementEntry/AdvertisementEntry.module.css
@@ -18,6 +18,11 @@
   margin-right: 8px;
 }
 
+.admedia {
+  object-fit: cover;
+  height: 20rem;
+}
+
 .buttons {
   display: flex;
   justify-content: flex-end;
