--- a/src/components/UserPortal/OrgScreen/OrgScreen.module.css
+++ b/src/components/UserPortal/OrgScreen/OrgScreen.module.css
@@ -37,6 +37,9 @@
 }
 
 @media (max-width: 1120px) {
+  .pageContainer {
+    padding-left: calc(250px + 1.5rem);
+  }
   .contract {
     padding-left: calc(250px + 1.5rem);
   }
