--- a/src/components/EventCalendar/EventCalendar.module.css
+++ b/src/components/EventCalendar/EventCalendar.module.css
@@ -19,6 +19,32 @@
   font-weight: bold;
   border: 0px;
 }
+
+.calendar__scroll {
+  height: 80vh;
+  overflow-y: scroll;
+  padding: 10px;
+}
+
+.calendar__scroll::-webkit-scrollbar {
+  width: 7px;
+}
+
+.calendar__scroll::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 6px;
+}
+
+.calendar__scroll::-webkit-scrollbar-thumb {
+  background: var(--bs-gray-500);
+  border-radius: 6px;
+}
+
+.calendar__scroll::-webkit-scrollbar-thumb:hover {
+  background: var(--bs-gray-600);
+  border-radius: 6px;
+}
+
 .calendar__weekdays {
   display: grid;
   grid-template-columns: repeat(7, 1fr);
