--- a/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
+++ b/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
@@ -13,19 +13,22 @@
 }
 
 .leftDrawer::-webkit-scrollbar {
-  width: 6px;
+  width: 7px;
 }
 
 .leftDrawer::-webkit-scrollbar-track {
   background: #f1f1f1;
+  border-radius: 6px;
 }
 
 .leftDrawer::-webkit-scrollbar-thumb {
   background: var(--bs-gray-500);
+  border-radius: 6px;
 }
 
 .leftDrawer::-webkit-scrollbar-thumb:hover {
   background: var(--bs-gray-600);
+  border-radius: 6px;
 }
 
 .activeDrawer {
@@ -137,7 +140,8 @@
   font-weight: 600;
   overflow: hidden;
   display: -webkit-box;
-  -webkit-line-clamp: 2; /* number of lines to show */
+  -webkit-line-clamp: 2;
+  /* number of lines to show */
   -webkit-box-orient: vertical;
   word-wrap: break-word;
   white-space: normal;
