--- a/src/screens/OrgSettings/OrgSettings.module.css
+++ b/src/screens/OrgSettings/OrgSettings.module.css
@@ -1,10 +1,5 @@
-.settingsContainer {
-  min-height: 100vh;
-}
-
 .settingsBody {
-  min-height: 100vh;
-  margin: 2.5rem 1rem;
+  margin: 2.5rem 0;
 }
 
 .cardHeader {
@@ -27,26 +22,4 @@
 .cardBody .textBox {
   margin: 0 0 3rem 0;
   color: var(--bs-secondary);
-}
-
-hr {
-  border: none;
-  height: 1px;
-  background-color: var(--bs-gray-500);
-}
-
-.settingsTabs {
-  display: none;
-}
-
-@media (min-width: 577px) {
-  .settingsDropdown {
-    display: none;
-  }
-}
-
-@media (min-width: 577px) {
-  .settingsTabs {
-    display: block;
-  }
 }
