--- a/src/screens/OrganizationActionItems/OrganizationActionItems.module.css
+++ b/src/screens/OrganizationActionItems/OrganizationActionItems.module.css
@@ -121,10 +121,19 @@ hr {
 }
 
 .message {
+  margin-top: 25%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+.preview {
+  display: flex;
+  flex-direction: row;
+  font-weight: 900;
+  font-size: 16px;
+  color: rgb(80, 80, 80);
 }
 
 .searchForm {
@@ -139,6 +148,13 @@ hr {
   padding-bottom: 5px;
   border-bottom: 3px solid #31bb6b;
   width: 65%;
+}
+
+.view {
+  margin-left: 2%;
+  font-weight: 600;
+  font-size: 16px;
+  color: #707070;
 }
 
 @media (max-width: 1020px) {
