Changed some file names.

--- a/src/assets/css/scrollStyles.css
+++ b/src/assets/css/scrollStyles.css
@@ -1,18 +1,18 @@
-.custom-scroll {
+.customScroll {
   overflow-y: scroll;
 }
-.custom-scroll::-webkit-scrollbar {
+.customScroll::-webkit-scrollbar {
   width: 5px;
 }
-.custom-scroll::-webkit-scrollbar-track {
+.customScroll::-webkit-scrollbar-track {
   background: #f1f1f1;
   border-radius: 6px;
 }
-.custom-scroll::-webkit-scrollbar-thumb {
+.customScroll::-webkit-scrollbar-thumb {
   background: var(--bs-gray-500);
   border-radius: 6px;
 }
-.custom-scroll::-webkit-scrollbar-thumb:hover {
+.customScroll::-webkit-scrollbar-thumb:hover {
   background: var(--bs-gray-600);
   border-radius: 6px;
 }
