--- a/src/screens/UserPortal/Home/Home.module.css
+++ b/src/screens/UserPortal/Home/Home.module.css
@@ -10,10 +10,6 @@
   max-width: 300px;
 }
 
-.colorLight {
-  background-color: #f5f5f5;
-}
-
 .mainContainer {
   width: 50%;
   flex-grow: 3;
@@ -23,7 +19,7 @@
 }
 
 .containerHeight {
-  height: calc(100vh - 66px);
+  height: 100vh;
 }
 
 .link {
