--- a/src/screens/UserPortal/Organizations/Organizations.module.css
+++ b/src/screens/UserPortal/Organizations/Organizations.module.css
@@ -10,10 +10,6 @@
   max-width: 300px;
 }
 
-.colorLight {
-  background-color: #f5f5f5;
-}
-
 .mainContainer {
   width: 50%;
   flex-grow: 3;
@@ -24,7 +20,7 @@
 
 .content {
   height: fit-content;
-  min-height: calc(100% - 40px);
+  min-height: calc(100% - 120px);
 }
 
 .gap {
@@ -36,7 +32,7 @@
 }
 
 .containerHeight {
-  height: calc(100vh - 66px);
+  height: 100vh;
 }
 
 .colorPrimary {
