--- a/src/screens/UserPortal/People/People.module.css
+++ b/src/screens/UserPortal/People/People.module.css
@@ -14,10 +14,6 @@
   max-width: 300px;
 }
 
-.colorLight {
-  background-color: #f5f5f5;
-}
-
 .mainContainer {
   width: 50%;
   flex-grow: 3;
@@ -28,7 +24,7 @@
 
 .content {
   height: fit-content;
-  min-height: calc(100% - 40px);
+  min-height: calc(100% - 70px);
 }
 
 .gap {
@@ -40,7 +36,7 @@
 }
 
 .containerHeight {
-  height: calc(100vh - 66px);
+  height: 100vh;
 }
 
 .colorPrimary {
