--- a/src/components/UserPortal/OrganizationCard/OrganizationCard.module.css
+++ b/src/components/UserPortal/OrganizationCard/OrganizationCard.module.css
@@ -1,22 +1,115 @@
-.mainContainer {
-  width: 100%;
+.orgCard {
+  background-color: var(--bs-white);
+  margin: 0.5rem;
+  height: calc(120px + 2rem);
+  padding: 1rem;
+  border-radius: 8px;
+  outline: 1px solid var(--bs-gray-200);
+  position: relative;
+  width: 48%;
+}
+
+.orgCard .innerContainer {
   display: flex;
-  flex-direction: row;
-  padding: 10px;
-  cursor: pointer;
-  background-color: white;
-  border-radius: 10px;
-  box-shadow: 2px 2px 8px 0px #c8c8c8;
+}
+
+.orgCard .innerContainer .orgImgContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  overflow: hidden;
+  border-radius: 4px;
+  width: 125px;
+  height: 120px;
+  object-fit: contain;
+  background-color: var(--bs-gray-200);
+}
+
+.orgCard .innerContainer .content {
+  flex: 1;
+  margin-left: 1rem;
+  width: 70%;
+}
+
+.orgCard button {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 1;
+}
+
+.joinBtn {
+  display: flex;
+  justify-content: space-around;
+  width: 120px;
+  border-width: medium;
+}
+
+.joinedBtn {
+  display: flex;
+  justify-content: space-around;
+  width: 120px;
+}
+
+.withdrawBtn {
+  display: flex;
+  justify-content: space-around;
+  width: 120px;
+}
+
+.orgName {
+  text-overflow: ellipsis;
+  white-space: nowrap;
   overflow: hidden;
 }
 
-.organizationDetails {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+@media (max-width: 1170px) {
+  .orgCard {
+    width: 100%;
+  }
 }
 
-.removeDecoration {
-  text-decoration: none !important;
-  color: black;
+@media (max-width: 450px) {
+  .orgCard {
+    width: 100%;
+  }
+
+  .orgCard {
+    height: unset;
+    margin: 0.5rem 0;
+    padding: 1.25rem 1.5rem;
+  }
+
+  .orgCard .innerContainer .orgImgContainer {
+    margin-bottom: 0.8rem;
+  }
+
+  .orgCard .innerContainer {
+    flex-direction: column;
+  }
+
+  .orgCard .innerContainer .orgImgContainer img {
+    height: auto;
+    width: 100%;
+  }
+
+  .orgCard .innerContainer .content {
+    margin-left: 0;
+  }
+
+  .orgCard button {
+    bottom: 0;
+    right: 0;
+    position: relative;
+    margin-left: auto;
+    display: block;
+  }
+  .joinBtn,
+  .joinedBtn,
+  .withdrawBtn {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+  }
 }
