Fixes Organization Not Found in Left Drawer  (#1592)
* Fixed Organization Not Found in Left Drawer

* Fix State update when MemberDetail is unmounted

* Shifted UseEffect to be called from top level function

* Shift useEffect to be called form top-level

* Add Test Coverage for images in MemberDetail

* Fixed Linting issues & removed unrelated code to current PR from LoginPage

* prettier update

* Fix improper testcase in MemberDetail.test

* State Update on Unmount Resolved in Testing

* Added dicebear url constants

* Revert changes in Readme & package-lock.json

* Added tests for LeftDrawer & MemberDetail for full coverage

* Refactor OrganizationScreen & SuperAdminScreen

* Remove commented line

* Modified tests in OrganizationScreen & SuperAdminScreen

* Revert README.md

---------

Co-authored-by: Peter Harrison <16875803+palisadoes@users.noreply.github.com>

--- a/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
+++ b/src/components/LeftDrawerOrg/LeftDrawerOrg.module.css
@@ -87,9 +87,9 @@
   border: none;
   width: 100%;
   margin-top: 5rem;
+  padding: 2.1rem 0.5rem;
   height: 52px;
   border-radius: 8px;
-  background-color: var(--bs-white);
   display: flex;
   align-items: center;
 }
