--- a/src/screens/OrganizationActionItems/OrganizationActionItems.module.css
+++ b/src/screens/OrganizationActionItems/OrganizationActionItems.module.css
@@ -85,8 +85,9 @@
   outline: none;
   font-weight: 600;
   cursor: pointer;
-  transition: transform 0.2s, box-shadow 0.2s;
-  width: 100%;
+  transition:
+    transform 0.2s,
+    box-shadow 0.2s;  width: 100%;
 }
 
 hr {
