--- a/src/components/UserPortal/PeopleCard/PeopleCard.module.css
+++ b/src/components/UserPortal/PeopleCard/PeopleCard.module.css
@@ -19,4 +19,15 @@
 .personImage {
   border-radius: 50%;
   margin-right: 20px;
+  max-width: 70px;
+}
+
+.borderBox {
+  border: 1px solid #dddddd;
+  box-shadow: 5px 5px 4px 0px #31bb6b1f;
+  border-radius: 4px;
+}
+
+.greenText {
+  color: #31bb6b;
 }
